# zero

./: Cargo.toml  README.md  configuration.yaml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
migrations/: 20231108040645_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs  utils.rs
