[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

[dependencies]
actix-web = "4.0.0"
cargo-edit = "0.11.6"
reqwest = "0.11.13"
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
