[package]
name = "zero"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero"

[dependencies]
actix-web = "4.0.0"
cargo-edit = "0.11.6"
chrono = "0.4.31"
config = "0.13.3"
reqwest = "0.11.13"
serde = { version = "1.0.150", features = ["derive"] }
sqlx-cli = "0.7.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
[dependencies.sqlx]
version = "0.7.1"
default_features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
